gitops-demo/config-repo/workloads/gitops-example-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-example-deployment
  namespace: gitops-cicd
  labels:
    app: gitops-example
  annotations:
    # Container Image Automated Updates
    fluxcd.io/automated: "true"
spec:
  selector:
    matchLabels:
      app: gitops-example
  replicas: 3
  template:
    metadata:
      labels:
        app: gitops-example
    spec:
      containers:
      - name: gitops-example
        image: ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/gitops-app-demo:b9f732f
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
