gitops-demo/config-repo/workloads/gitops-example-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-example-service
  namespace: gitops-cicd
  labels:
    app: gitops-example
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: gitops-example
