gitops-demo/config-repo/workloads/gitops-example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitops-example-alb-ingress
  namespace: gitops-cicd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: gitops-example
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: gitops-example-service
              servicePort: 80
